--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
           <h2>Our vision</h2>
           <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
         </div>
+        <div class="buttonfororder">
+          <a href="menu.html" class="ordernowbtn" target="_blank">Order Now!</a>
+        </div>
       </div>
     </div>
 
@@ -57,7 +60,7 @@
             Images taken by our customers.
           </span></h1>
         <div class="gallery-grid">
-          <a href="../gallery-images/GALIMG1.jpg" target="_blank">
+          <a href="gallery-images/GALIMG1.jpg" target="_blank">
             <img src="gallery-images/GALIMG1.jpg" alt="">
           </a>
           <a href="gallery-images/GALIMG2.jpg" target="_blank">
@@ -77,6 +80,9 @@
           </a>
           <a href="gallery-images/GALIMG7.jpg" target="_blank">
             <img src="gallery-images/GALIMG7.jpg" alt="">
+          </a>
+          <a href="gallery-images/GALIMG8.jpg" target="_blank">
+            <img src="gallery-images/GALIMG8.jpg" alt="">
           </a>
         </div>
       </section>
@@ -109,13 +115,13 @@
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <div class="star-rating" data-rating="3"></div>
+            <div class="star-rating" data-rating="4"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium, temporibus, quos illo
               totam dolore sint fugit explicabo ullam rerum iste fugiat quisquam, officiis unde?</p>
           </div>
           <div class="review">
             <h3 class="name"> - lorem</h3>
-            <div class="star-rating" data-rating="2"></div>
+            <div class="star-rating" data-rating="4"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni neque iste maxime, velit
               doloribus. Maxime commodi quo nisi cumque magni possimus architecto!</p>
           </div>
@@ -161,19 +167,19 @@
     <footer>
       <div class="footer">
         <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logoicon2"> Ka'Taqam Café
-        <a href=""><img src="logos/icons8-facebook-144.png" alt=""></a>
-        <a href=""><img src="logos/icons8-instagram-144.png" alt=""></a>
-        <a href=""><img src="logos/icons8-tiktok-144.png" alt=""></a>
+        <a href="https://www.facebook.com/kataqamcafe" target="_blank"><img src="logos/icons8-facebook-144.png"
+            alt="Facebook"></a>
+        <a href="#" target="_blank"><img src="logos/icons8-instagram-144.png" alt="Instagram"></a>
+        <a href="#" target="_blank"><img src="logos/icons8-tiktok-144.png" alt="TikTok"></a>
       </div>
     </footer>
     <script src="MAIN/script.js"></script>
   </div>
-
   <div class="message">
     <h1>NOTICE</h1>
     <h1>⚠️</h1>
-    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device. <br>Thank you! :)</p>
+    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device.<br>
+    <br>We apologize for the inconvenience.</p>
   </div>
 </body>
-
 </html>
