MAJOR CHANGES - FINAL OUTPUT.
ADDED CHECKOUT FEATURE (NO FUNCTIONALITY) ADDED LIGHTBOX FOR GALLERY - (SO THAT THE USER DOESNT NEED TO LEAVE THE SITE)

--- a/index.html
+++ b/index.html
@@ -173,13 +173,21 @@
         <a href="#" target="_blank"><img src="logos/icons8-tiktok-144.png" alt="TikTok"></a>
       </div>
     </footer>
+    <!-- Lightbox Structure -->
+    <div id="lightbox" class="lightbox">
+      <span class="close-lightbox">&times;</span>
+      <img class="lightbox-content" id="lightbox-img">
+    </div>
+
     <script src="MAIN/script.js"></script>
   </div>
   <div class="message">
     <h1>NOTICE</h1>
     <h1>⚠️</h1>
     <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device.<br>
-    <br>We apologize for the inconvenience.</p>
+      <br>We apologize for the inconvenience.
+    </p>
   </div>
 </body>
+
 </html>
