--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
               <p><strong>✉️ Email:</strong><br><a href="mailto:kataqamcafe@gmail.com">kataqamcafe@gmail.com</a></p>
             </div>
             <div class="contact-item">
-              <p><strong>⏰ Business Hours:</strong><br>8 AM to 11 PM (Friday to Wednesday)</p>
+              <p><strong>⏰ Business Hours:</strong><br>8 AM to 11 PM (Friday to Wednesday) <br> <span
+                  style="color: rgb(110, 4, 4);">CLOSED ON TUESDAYS.</span></p>
             </div>
           </div>
           <div class="map-container">
@@ -183,8 +184,9 @@
   <div class="message">
     <h1>NOTICE</h1>
     <h1>⚠️</h1>
-    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device.<br>
-      <br>We apologize for the inconvenience.
+    <p>Our website is optimized for larger screens.<br>Please try viewing on a different device for the best
+      experience.<br>
+      <br>Thank you for your understanding.
     </p>
   </div>
 </body>
