--- a/menu.html
+++ b/menu.html
@@ -257,7 +257,10 @@
   <div class="message">
     <h1>NOTICE</h1>
     <h1>⚠️</h1>
-    <p>Your device is unfortunately too small for us to handle.<br>Please use a bigger device. <br>Thank you! :)</p>
+    <p>Our website is optimized for larger screens.<br>Please try viewing on a different device for the best
+      experience.<br>
+      <br>Thank you for your understanding.
+    </p>
   </div>
   <script src="MAIN/script.js"></script>
 </body>
