changes and fixes

--- a/index.html
+++ b/index.html
@@ -94,50 +94,60 @@
           </span></h1>
         <div class="reviews-grid">
           <div class="review">
-            <h3 class="name"> - lorem</h3>
+            <h3 class="name"> <img src="logos/user.png" alt="user logo"> - Vince Salazar <span class="date">2 months
+                ago</span></h3>
             <div class="star-rating" data-rating="5"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam possimus error, tenetur fugit debitis enim
-              eum beatae id perferendis sequi!</p>
+            <p>This cozy cafe in Midtown Village is a refreshing addition to the community. The food was delicious; I
+              especially enjoyed the pizza. We also had slices of cake and loved the blueberry cheesecake. I haven't
+              tried the coffee yet, but it looked good. They also offer other dishes that I saw other diners enjoying,
+              like nachos, rice, and crispy pata. The overall interior was great. Too bad it was raining, so we didn't
+              get to experience the al fresco dining. The service was okay. They accept cash and Gcash for payment; I'm
+              hoping they'll soon accept credit cards.</p>
           </div>
           <div class="review">
-            <h3 class="name"> - lorem</h3>
+            <h3 class="name"> <img src="logos/user.png" alt="user logo"> - King Mercado <span class="date">3 weeks
+                ago</span></h3>
             <div class="star-rating" data-rating="5"></div>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aut molestiae cumque expedita iste accusamus,
-              ex
-              sed quidem dolores asperiores sequi nisi reiciendis quae facere harum autem dolorem itaque inventore non?
+            <p>Food: 5/5 | Service: 5/5 | Atmosphere: 5/5
             </p>
           </div>
           <div class="review">
-            <h3 class="name"> - lorem</h3>
-            <div class="star-rating" data-rating="4"></div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore quae expedita, tempora perferendis
-              voluptas ratione.</p>
+            <h3 class="name"> <img src="logos/user.png" alt="user logo"> - Enzo James <span class="date">9 months
+                ago</span></h3>
+            <div class="star-rating" data-rating="5"></div>
+            <p>Perfection!! Super quiet, nice atmosphere, even air-conditioned. The best part is, it's within biking
+              distance! Super fun to review here, work, go on dates, or just hang out! 10/10 I will be back here for
+              sure :).</p>
           </div>
           <div class="review">
-            <h3 class="name"> - lorem</h3>
-            <div class="star-rating" data-rating="4"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae praesentium, temporibus, quos illo
-              totam dolore sint fugit explicabo ullam rerum iste fugiat quisquam, officiis unde?</p>
+            <h3 class="name"> <img src="logos/user.png" alt="user logo"> - K C <span class="date">6 months ago</span>
+            </h3>
+            <div class="star-rating" data-rating="5"></div>
+            <p>The best blueberry cheesecake I've had so far. Not sour, not super sweet. The bottom layer of tart is
+              thick too ❤️ I also like their Hawaiian pizza. Their atmosphere is great. There is a dining area outside
+              and an airconditioned area too. They allowed me to bring my pet too. Pretty chill place. We'll definitely
+              go back here</p>
           </div>
           <div class="review">
-            <h3 class="name"> - lorem</h3>
-            <div class="star-rating" data-rating="4"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates magni neque iste maxime, velit
-              doloribus. Maxime commodi quo nisi cumque magni possimus architecto!</p>
+            <h3 class="name"> <img src="logos/user.png" alt="user logo"> - JILLIANE jilliane <span class="date">9 months
+                ago</span></h3>
+            <div class="star-rating" data-rating="5"></div>
+            <p>Food: 5/5 | Service: 5/5 | Atmosphere: 5/5</p>
           </div>
           <div class="review">
-            <h3 class="name"> - lorem</h3>
+            <h3 class="name"> <img src="logos/user.png" alt="user logo"> - MAY ANN ECHALAS <span class="date">8 months
+                ago </span></h3>
             <div class="star-rating" data-rating="4"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod praesentium corrupti aliquam asperiores
-              debitis natus aspernatur consectetur? Fugiat, recusandae. Temporibus, in ipsum. Quos et distinctio
-              blanditiis minus.</p>
+            <p>Food: 4/5 | Service: 5/5 | Atmosphere: 5/5</p>
           </div>
         </div>
       </section>
     </div>
     <div class="divbox">
       <section class="contact" id="contact">
-        <h1>Contact Us</h1>
+        <h1>Contact Us <br><span class="small">
+            Our contact informations.
+          </span></h1>
         <div class="contact-container">
           <div class="contact-info">
             <h2>Get In Touch</h2>
@@ -152,7 +162,7 @@
             </div>
             <div class="contact-item">
               <p><strong>⏰ Business Hours:</strong><br>8 AM to 11 PM (Friday to Wednesday) <br> <span
-                  style="color: rgb(110, 4, 4);">CLOSED ON TUESDAYS.</span></p>
+                  style="color: rgb(252, 3, 3);">CLOSED ON TUESDAYS.</span></p>
             </div>
           </div>
           <div class="map-container">
