--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <p>To grow through franchising and adapt to new trends while keeping our unique touch.</p>
         </div>
         <div class="buttonfororder">
-          <a href="menu.html" class="ordernowbtn" target="_blank">Order Now!</a>
+          <a href="menu.html" class="ordernowbtn">Order Now!</a>
         </div>
       </div>
     </div>
