--- a/menu.html
+++ b/menu.html
@@ -206,9 +206,10 @@
     <footer>
       <div class="footer">
         <img src="icon.jpg" alt="Ka'Taqam Café Logo" class="logoicon2"> Ka'Taqam Café
-        <a href=""><img src="logos/icons8-facebook-144.png" alt=""></a>
-        <a href=""><img src="logos/icons8-instagram-144.png" alt=""></a>
-        <a href=""><img src="logos/icons8-tiktok-144.png" alt=""></a>
+        <a href="https://www.facebook.com/kataqamcafe" target="_blank"><img src="logos/icons8-facebook-144.png"
+            alt="Facebook"></a>
+        <a href="#" target="_blank"><img src="logos/icons8-instagram-144.png" alt="Instagram"></a>
+        <a href="#" target="_blank"><img src="logos/icons8-tiktok-144.png" alt="TikTok"></a>
       </div>
     </footer>
 
